--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi[standard]>=0.128.0",
+    "passlib[argon2,bcrypt]>=1.7.4",
+    "python-jose>=3.3.0",
+    "python-multipart>=0.0.22",
     "sqlmodel>=0.0.31",
 ]
